--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack serve --mode development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.0",
+    "eslint": "^7.12.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-vue": "^7.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
-    "node-sass": "^4.14.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.1.1",
-    "webpack-cli": "^4.0.0",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
